hphp/hack/test/typecheck/array_non_static.php.exp
File "array_non_static.php", line 8, characters 36-40:
Invalid expression in constant initializer (Parsing[1002])
